remove side menu

--- a/public/index.html
+++ b/public/index.html
@@ -7,15 +7,6 @@
   </head>
   <body>
 
-    <div class="ui inverted vertical sidebar menu">
-      <div class="right menu close item">
-        <i class="close icon"></i> <span>Close</span>
-      </div>
-      <div class="header item">
-        Menu
-      </div>
-    </div>
-
     <form id="search-form">
       <div class="ui fixed transparent inverted main menu">  
         <div>
@@ -29,22 +20,18 @@
             </div>
           </div>
 
-          <div class="item">
-            <a href="#home">
-              <i class="icon home"></i> <span>Home</span>
-            </a>
-          </div>
-          <a class="launch item">
-            <i class="icon list layout"></i> <span>Menu</span>
+          <a class="item" href="#home">
+            <i class="icon home"></i> <span>Home</span>
           </a>
+          <a class="launch item" href="https://github.com/jhudson8/react-plugins-united-example">
+            <i class="icon github"></i> <span>Source Code</span>
+          </a>
+
         </div>
       </div>
     </form>
 
     <div id="page-container" class="pad-all"></div>
-    <div id="page-footer" class="container">
-
-    </div>
 
   </body>
 
