--- a/public/index.html
+++ b/public/index.html
@@ -21,10 +21,10 @@
           </div>
 
           <a class="item" href="#home">
-            <i class="icon home"></i> <span>Home</span>
+            <i class="icon home hide-mobile"></i> <span class=" hide-mobile">Home</span>
           </a>
           <a class="launch item" href="https://github.com/jhudson8/react-plugins-united-example">
-            <i class="icon github"></i> <span>Source Code</span>
+            <i class="icon github"></i> <span class=" hide-mobile">Source Code</span>
           </a>
 
         </div>
